// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ChatInputs disabled unchanged 1`] = `
<div>
  <div
    class="memori-chat-inputs-wrapper"
  >
    <fieldset
      class="memori-chat-inputs"
      disabled=""
      id="chat-fieldset"
    >
      <div
        class="memori-chat-inputs--container"
      >
        <div
          class="memori-chat-inputs--leading"
        />
        <div
          class="memori-chat-inputs--primary"
        >
          <div
            class="memori-chat-textarea memori-chat-textarea--disabled"
            data-testid="chat-textarea"
          >
            <div
              class="memori-chat-textarea--inner"
              style="height: 36px;"
            >
              <textarea
                class="memori-chat-textarea--input"
                disabled=""
                maxlength="100000"
                placeholder="placeholder"
                style="height: 36px;"
              >
                Lorem ipsum
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="memori-chat-inputs--trailing"
        >
          <div
            class="memori-chat-inputs--trailing-inner"
          >
            <div
              class="memori-tooltip memori-tooltip--align-topLeft memori-mic-btn-tooltip"
            >
              <div
                class="memori-tooltip--content"
              >
                <span>
                  write_and_speak.pressAndHoldToSpeak
                </span>
              </div>
              <div
                class="memori-tooltip--trigger"
              >
                <div>
                  <button
                    class="memori-button memori-button--ghost memori-button--md memori-button--circle memori-button--icon-only"
                    tabindex="0"
                    title="write_and_speak.micButtonPopover"
                    type="button"
                  >
                    <span
                      class="memori-button__icon"
                    >
                      <svg
                        class="lucide lucide-mic"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                        />
                        <path
                          d="M19 10v2a7 7 0 0 1-14 0v-2"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="19"
                          y2="22"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              aria-label="send"
              class="memori-chat-inputs--send-btn memori-chat-inputs--send-btn--active"
              title="send"
              type="button"
            >
              <svg
                class="lucide lucide-send icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`renders ChatInputs listening unchanged 1`] = `
<div>
  <div
    class="memori-chat-inputs-wrapper"
  >
    <fieldset
      class="memori-chat-inputs"
      id="chat-fieldset"
    >
      <div
        class="memori-chat-inputs--container"
      >
        <div
          class="memori-chat-inputs--leading"
        />
        <div
          class="memori-chat-inputs--primary"
        >
          <div
            class="memori-chat-textarea"
            data-testid="chat-textarea"
          >
            <div
              class="memori-chat-textarea--inner"
              style="height: 36px;"
            >
              <textarea
                class="memori-chat-textarea--input"
                maxlength="100000"
                placeholder="placeholder"
                style="height: 36px;"
              >
                Lorem ipsum
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="memori-chat-inputs--trailing"
        >
          <div
            class="memori-chat-inputs--trailing-inner"
          >
            <div
              class="memori-tooltip memori-tooltip--align-topLeft memori-mic-btn-tooltip"
            >
              <div
                class="memori-tooltip--content"
              >
                <span>
                  write_and_speak.pressAndHoldToSpeak
                </span>
              </div>
              <div
                class="memori-tooltip--trigger"
              >
                <div>
                  <button
                    class="memori-button memori-button--ghost memori-button--md memori-button--circle memori-button--icon-only memori-chat-inputs--mic--listening"
                    tabindex="0"
                    title="write_and_speak.micButtonPopoverListening"
                    type="button"
                  >
                    <span
                      class="memori-button__icon"
                    >
                      <svg
                        class="lucide lucide-mic"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                        />
                        <path
                          d="M19 10v2a7 7 0 0 1-14 0v-2"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="19"
                          y2="22"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              aria-label="send"
              class="memori-chat-inputs--send-btn memori-chat-inputs--send-btn--active"
              title="send"
              type="button"
            >
              <svg
                class="lucide lucide-send icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`renders ChatInputs on instruct unchanged 1`] = `
<div>
  <div
    class="memori-chat-inputs-wrapper"
  >
    <fieldset
      class="memori-chat-inputs"
      id="chat-fieldset"
    >
      <div
        class="memori-chat-inputs--container"
      >
        <div
          class="memori-chat-inputs--leading"
        />
        <div
          class="memori-chat-inputs--primary"
        >
          <div
            class="memori-chat-textarea"
            data-testid="chat-textarea"
          >
            <div
              class="memori-chat-textarea--inner"
              style="height: 36px;"
            >
              <textarea
                class="memori-chat-textarea--input"
                maxlength="100000"
                placeholder="placeholder"
                style="height: 36px;"
              >
                Lorem ipsum
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="memori-chat-inputs--trailing"
        >
          <div
            class="memori-chat-inputs--trailing-inner"
          >
            <div
              class="memori-tooltip memori-tooltip--align-topLeft memori-mic-btn-tooltip"
            >
              <div
                class="memori-tooltip--content"
              >
                <span>
                  write_and_speak.pressAndHoldToSpeak
                </span>
              </div>
              <div
                class="memori-tooltip--trigger"
              >
                <div>
                  <button
                    class="memori-button memori-button--ghost memori-button--md memori-button--circle memori-button--icon-only"
                    tabindex="0"
                    title="write_and_speak.micButtonPopover"
                    type="button"
                  >
                    <span
                      class="memori-button__icon"
                    >
                      <svg
                        class="lucide lucide-mic"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                        />
                        <path
                          d="M19 10v2a7 7 0 0 1-14 0v-2"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="19"
                          y2="22"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              aria-label="send"
              class="memori-chat-inputs--send-btn memori-chat-inputs--send-btn--active"
              title="send"
              type="button"
            >
              <svg
                class="lucide lucide-send icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`renders ChatInputs unchanged 1`] = `
<div>
  <div
    class="memori-chat-inputs-wrapper"
  >
    <fieldset
      class="memori-chat-inputs"
      id="chat-fieldset"
    >
      <div
        class="memori-chat-inputs--container"
      >
        <div
          class="memori-chat-inputs--leading"
        />
        <div
          class="memori-chat-inputs--primary"
        >
          <div
            class="memori-chat-textarea"
            data-testid="chat-textarea"
          >
            <div
              class="memori-chat-textarea--inner"
              style="height: 36px;"
            >
              <textarea
                class="memori-chat-textarea--input"
                maxlength="100000"
                placeholder="placeholder"
                style="height: 36px;"
              />
            </div>
          </div>
        </div>
        <div
          class="memori-chat-inputs--trailing"
        >
          <div
            class="memori-chat-inputs--trailing-inner"
          >
            <div
              class="memori-tooltip memori-tooltip--align-topLeft memori-mic-btn-tooltip"
            >
              <div
                class="memori-tooltip--content"
              >
                <span>
                  write_and_speak.pressAndHoldToSpeak
                </span>
              </div>
              <div
                class="memori-tooltip--trigger"
              >
                <div>
                  <button
                    class="memori-button memori-button--ghost memori-button--md memori-button--circle memori-button--icon-only"
                    tabindex="0"
                    title="write_and_speak.micButtonPopover"
                    type="button"
                  >
                    <span
                      class="memori-button__icon"
                    >
                      <svg
                        class="lucide lucide-mic"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                        />
                        <path
                          d="M19 10v2a7 7 0 0 1-14 0v-2"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="19"
                          y2="22"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              aria-label="send"
              class="memori-chat-inputs--send-btn memori-chat-inputs--send-btn--disabled"
              disabled=""
              title="send"
              type="button"
            >
              <svg
                class="lucide lucide-send icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`renders ChatInputs with user message unchanged 1`] = `
<div>
  <div
    class="memori-chat-inputs-wrapper"
  >
    <fieldset
      class="memori-chat-inputs"
      id="chat-fieldset"
    >
      <div
        class="memori-chat-inputs--container"
      >
        <div
          class="memori-chat-inputs--leading"
        />
        <div
          class="memori-chat-inputs--primary"
        >
          <div
            class="memori-chat-textarea"
            data-testid="chat-textarea"
          >
            <div
              class="memori-chat-textarea--inner"
              style="height: 36px;"
            >
              <textarea
                class="memori-chat-textarea--input"
                maxlength="100000"
                placeholder="placeholder"
                style="height: 36px;"
              >
                Lorem ipsum
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="memori-chat-inputs--trailing"
        >
          <div
            class="memori-chat-inputs--trailing-inner"
          >
            <div
              class="memori-tooltip memori-tooltip--align-topLeft memori-mic-btn-tooltip"
            >
              <div
                class="memori-tooltip--content"
              >
                <span>
                  write_and_speak.pressAndHoldToSpeak
                </span>
              </div>
              <div
                class="memori-tooltip--trigger"
              >
                <div>
                  <button
                    class="memori-button memori-button--ghost memori-button--md memori-button--circle memori-button--icon-only"
                    tabindex="0"
                    title="write_and_speak.micButtonPopover"
                    type="button"
                  >
                    <span
                      class="memori-button__icon"
                    >
                      <svg
                        class="lucide lucide-mic"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                        />
                        <path
                          d="M19 10v2a7 7 0 0 1-14 0v-2"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="19"
                          y2="22"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              aria-label="send"
              class="memori-chat-inputs--send-btn memori-chat-inputs--send-btn--active"
              title="send"
              type="button"
            >
              <svg
                class="lucide lucide-send icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`renders ChatInputs without microphone button unchanged 1`] = `
<div>
  <div
    class="memori-chat-inputs-wrapper"
  >
    <fieldset
      class="memori-chat-inputs"
      id="chat-fieldset"
    >
      <div
        class="memori-chat-inputs--container"
      >
        <div
          class="memori-chat-inputs--leading"
        />
        <div
          class="memori-chat-inputs--primary"
        >
          <div
            class="memori-chat-textarea"
            data-testid="chat-textarea"
          >
            <div
              class="memori-chat-textarea--inner"
              style="height: 36px;"
            >
              <textarea
                class="memori-chat-textarea--input"
                maxlength="100000"
                placeholder="placeholder"
                style="height: 36px;"
              >
                Lorem ipsum
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="memori-chat-inputs--trailing"
        >
          <div
            class="memori-chat-inputs--trailing-inner"
          >
            <button
              aria-label="send"
              class="memori-chat-inputs--send-btn memori-chat-inputs--send-btn--active"
              title="send"
              type="button"
            >
              <svg
                class="lucide lucide-send icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
